fixed font console errors but font still doesnt load on firefox

--- a/app/scss/sitewide.scss
+++ b/app/scss/sitewide.scss
@@ -17,7 +17,7 @@ body {
 
 @font-face {
   font-family: SignPainter;
-  src: url('fonts/SignPainter.otf') format('opentype');
+  src: url('fonts/SignPainter.otf') format('otf');
   font-weight: normal;
 }
 
